--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,6 +1,7 @@
 system:
   type: "beacon"  # options: beacon, x-plane
   dt: 0.1
+  use_observations: false
 
 hjnnv:
   filtering: true
@@ -9,6 +10,7 @@ hjnnv:
 experiment_setup:
   num_steps: 100
   expt_number: 1
+  expt_type: "trajectory"
   show_plot: true
   save: false
 
